fix icon sizes in buttons on mobile safari

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -35,6 +35,7 @@ body {
 .circle-icon {
   width: 45px;
   height: 45px;
+  padding: 0;
   border-radius: 50%;
   background: transparent;
   border: none;
